--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 venv
+data/raw
+
+data/partitions/client_1/test
+data/partitions/client_2/test
+data/partitions/client_3/test
+
+data/partitions/client_1/train
+data/partitions/client_2/train
+data/partitions/client_3/train
